# SnakeAI

./: .gitignore  AI.gdnlib  AI.gdns  Apple.gd  Cargo.toml  Game.gd  Game.tscn  Score.gd  Snake.gd  Timer.gd  export_presets.cfg  project.godot
.import/: brush.svg-329c11368efdf5d8e192c819cb0e046e.md5  brush.svg-329c11368efdf5d8e192c819cb0e046e.stex  down-arrow.svg-f04007bee614722fb00c5e7b50886334.md5  down-arrow.svg-f04007bee614722fb00c5e7b50886334.stex  icon.png-487276ed1e3a0c39cad0279d744ee560.md5  icon.png-487276ed1e3a0c39cad0279d744ee560.stex  rust-logo.png-a97582fcb60cb5dd7959ba042749802f.md5  rust-logo.png-a97582fcb60cb5dd7959ba042749802f.stex  wheel.svg-7a1d17f1b7932eb7248d38754cfcb93b.md5  wheel.svg-7a1d17f1b7932eb7248d38754cfcb93b.stex
src/: benches.rs  snake_ai.rs
