[package]
name = "SnakeAI"
version = "0.1.0"
authors = ["Mike White <botahamec@outlook.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
name = "snake_ai"
path = "src/snake_ai.rs"
crate-type = ["cdylib"]

[dependencies]
gdnative = "0.7.0"